initial implementation of manager
